--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,10 @@
 /* add your css on this page */
-body { 
-    background-color: #571349;
-    color: #E0D7DF;
-    margin: 0;
-    padding: 0;
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+a {
+    display: block;
+    margin: 2em;
+    font-size: 1.2em;
+    text-decoration: none;
 }
